--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,26 @@
   src: url("../font/Outfit-Regular.ttf");
 }
 
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #8f54a0 #ffffff00;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff00;
+  padding: 1rem;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #3d3d3d;
+  border-radius: 10px;
+  border: 3px solid #ffffff00;
+}
+
 /*
 ! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
 */
@@ -553,10 +573,6 @@ video {
   }
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -573,20 +589,17 @@ video {
   top: 0px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-auto {
-  left: auto;
-}
-
 .z-0 {
   z-index: 0;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-4 {
@@ -601,16 +614,12 @@ video {
   margin-left: 1rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .flex {
@@ -621,16 +630,20 @@ video {
   display: table;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
 .h-\[100\%\] {
   height: 100%;
 }
 
 .h-\[100vh\] {
   height: 100vh;
-}
-
-.h-\[10rem\] {
-  height: 10rem;
 }
 
 .h-\[20rem\] {
@@ -641,56 +654,24 @@ video {
   height: 3.2rem;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
 .h-full {
   height: 100%;
 }
 
-.h-2 {
-  height: 0.5rem;
+.max-h-\[100vh\] {
+  max-height: 100vh;
 }
 
-.h-1 {
-  height: 0.25rem;
+.max-h-\[38rem\] {
+  max-height: 38rem;
 }
 
-.h-20 {
-  height: 5rem;
+.max-h-\[80\%\] {
+  max-height: 80%;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
-.max-h-10 {
-  max-height: 2.5rem;
-}
-
-.max-h-\[10rem\] {
-  max-height: 10rem;
-}
-
-.max-h-\[20rem\] {
-  max-height: 20rem;
-}
-
-.max-h-\[40rem\] {
-  max-height: 40rem;
-}
-
-.max-h-\[100\%\] {
-  max-height: 100%;
+.max-h-\[90\%\] {
+  max-height: 90%;
 }
 
 .w-\[100\%\] {
@@ -701,20 +682,16 @@ video {
   width: 3.2rem;
 }
 
+.w-\[30\%\] {
+  width: 30%;
+}
+
 .w-full {
   width: 100%;
 }
 
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-\[30\%\] {
-  width: 30%;
+.min-w-\[20rem\] {
+  min-width: 20rem;
 }
 
 .max-w-\[50rem\] {
@@ -723,14 +700,6 @@ video {
 
 .max-w-\[55\%\] {
   max-width: 55%;
-}
-
-.flex-auto {
-  flex: 1 1 auto;
-}
-
-.flex-grow {
-  flex-grow: 1;
 }
 
 .cursor-pointer {
@@ -749,16 +718,16 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .space-x-16 > :not([hidden]) ~ :not([hidden]) {
@@ -779,16 +748,16 @@ video {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.justify-self-start {
-  justify-self: start;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
 .overflow-y-auto {
   overflow-y: auto;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-\[50\%\] {
@@ -811,20 +780,16 @@ video {
   border-bottom-width: 2px;
 }
 
-.border-r-2 {
-  border-right-width: 2px;
-}
-
 .border-l-2 {
   border-left-width: 2px;
 }
 
-.border-solid {
-  border-style: solid;
+.border-r-2 {
+  border-right-width: 2px;
 }
 
-.border-dotted {
-  border-style: dotted;
+.border-solid {
+  border-style: solid;
 }
 
 .border-\[\#404040\] {
@@ -837,21 +802,6 @@ video {
   border-color: rgb(69 69 69 / var(--tw-border-opacity));
 }
 
-.border-green-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity));
-}
-
-.border-red-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(248 113 113 / var(--tw-border-opacity));
-}
-
-.border-red-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
 .bg-\[\#1f1f1f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(31 31 31 / var(--tw-bg-opacity));
@@ -862,24 +812,14 @@ video {
   background-color: rgb(38 38 38 / var(--tw-bg-opacity));
 }
 
-.bg-fuchsia-400 {
+.bg-\[\#404040\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(232 121 249 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#fe971f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(254 151 31 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#404040\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
@@ -918,20 +858,20 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .pr-2 {
   padding-right: 0.5rem;
 }
 
-.pl-2 {
-  padding-left: 0.5rem;
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .font-\[outfit\] {
@@ -967,14 +907,14 @@ video {
   color: rgb(245 135 6 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-\[\#fe971f\] {
   --tw-text-opacity: 1;
   color: rgb(254 151 31 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -985,12 +925,12 @@ video {
   opacity: 0.4;
 }
 
-.opacity-80 {
-  opacity: 0.8;
-}
-
 .opacity-60 {
   opacity: 0.6;
+}
+
+.opacity-80 {
+  opacity: 0.8;
 }
 
 .shadow-xl {
